<resources>
    <string name="app_name">Buckwheat</string>
    <string name="app_widget_extend_name">Buckwheat extend</string>
    <string name="app_widget_minimal_name">Buckwheat minimal</string>
    <string name="budget_for_today">Budget for today</string>
    <string name="rest_budget_for_today">For today</string>
    <string name="new_daily_budget_short">New daily</string>
    <string name="new_daily_budget">New daily budget</string>
    <string name="new_daily_budget_description">Today you went beyond the daily budget, do not worry, it\'s not scary. For the following days, the budget will be recalculated taking into account the remaining total budget</string>
    <string name="budget_end">The budget is over</string>
    <string name="budget_not_set">No budget set</string>
    <string name="budget_end_description">You went beyond the planned budget, do not worry, it\'s not scary, spending is never the same. Start spending further to understand how much you will spend in the end and what budget you need</string>
    <string name="new_spent">New spending</string>
    <plurals name="spends_today">
        <item quantity="one">%1$s spent today</item>
        <item quantity="other">%1$s spends today</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <string name="enter_spent_placeholder">Enter spent</string>
    <string name="hide_overspending_warn">Hide budget end message</string>
    <string name="hide_overspending_warn_description">The message will be hidden until the end of the period, so as not to distract or strain</string>
    <string name="add_comment">Tag</string>
    <string name="label_start_date">Start</string>
    <string name="label_finish_date">Finish</string>
    <string name="remove_spent">Expenditure returned to budget</string>
    <string name="remove_spent_undo">Undo</string>
    <string name="no_spends">No spending yet</string>
    <string name="total_per_day">Day total:</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="wallet_title">Budget</string>
    <string name="wallet_edit_title">New budget</string>
    <string name="label_budget">Budget</string>
    <string name="select_finish_date_title">Choose a finish date</string>
    <plurals name="finish_date_label">
        <item quantity="one">To %1$s (%2$s day)</item>
        <item quantity="other">To %1$s (%2$s days)</item>
    </plurals>
    <plurals name="days_count">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <string name="export_to_csv">Export to CSV</string>
    <string name="finish_date_not_select">No finish date selected</string>
    <string name="in_currency_label">Currency</string>
    <string name="currency_from_list">World currency</string>
    <string name="currency_custom">Custom currency</string>
    <string name="currency_none">No currency</string>
    <string name="per_day">%1$s per day</string>
    <string name="total_title">Total</string>
    <string name="unable_calc_budget">Unable to budget</string>
    <string name="budget_must_greater_zero">Enter your budget</string>
    <string name="days_must_greater_zero">Calculate the budget for at least one day</string>
    <string name="apply">Apply</string>
    <string name="done">Got it</string>
    <string name="change_budget">Change budget</string>
    <string name="select_currency_title">Select currency</string>
    <string name="search_currency_placeholder">Currency code or name</string>
    <string name="currency_not_found">No matching currencies</string>
    <string name="currency_custom_title">Enter your currency</string>
    <string name="currency_custom_description">For example, spending 150 conventional units will be displayed like this:</string>
    <string name="confirm_change_budget_title">Budget change</string>
    <string name="confirm_change_budget_description">Please note that when you change the budget, the current spending history will be deleted and the countdown will start over</string>
    <string name="confirm_change_budget">Change budget</string>
    <string name="use_last">Previous values</string>
    <string name="days_left">Days left</string>
    <string name="settings_title">Settings</string>
    <string name="theme_label">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="locale_label">Language</string>
    <string name="locale_system">Systemic</string>
    <string name="version">Version: %1$s</string>
    <string name="about">About app</string>
    <string name="description">Buckwheat is an app that helps you spend money wisely. Writing down each spending sobers the mind and gives you an idea of how much and how you can spend.</string>
    <string name="report_bug">Report a bug</string>
    <string name="contribute">Contribute</string>
    <string name="developer">Development &amp; design:</string>
    <string name="report_bug_title">Report a bug</string>
    <string name="report_via_github">Via GitHub issue</string>
    <string name="report_via_email">Via email</string>
    <string name="new_day_title">Congratulations! You saved</string>
    <string name="recalc_budget">Find out how to budget</string>
    <string name="split_rest_days_title">Split by remaining days</string>
    <string name="split_rest_days_description">Get %1$s per day</string>
    <string name="add_current_day_title">Leave for Today</string>
    <string name="add_current_day_description">There will be %1$s for today and %2$s for the following days</string>
    <string name="finish_period_title">Period ended</string>
    <string name="period_summary_title">Here are the statistics for this period</string>
    <string name="period_summary_no_spends_title">Wow, you haven\'t spent anything in this period</string>
    <string name="new_period_title">Set up a new budget</string>
    <string name="whole_budget">Starting budget</string>
    <string name="rest_budget">Left</string>
    <string name="rest_budget_percent">%1$s%% of budget</string>
    <string name="min_spent">Minimum spend</string>
    <string name="max_spent">Maximum spending</string>
    <string name="count_spends">Transactions</string>
    <string name="average_spent">Average spend</string>
    <string name="advice_title">You are doing well</string>
    <string name="advice_description">Write down all your expenses and don\'t worry about going over budget, spending is not a constant thing.</string>
    <string name="overspending_value">on %1$s</string>
    <string name="overspending_never_exceeded_daily_budget">You have never exceeded your daily budget</string>
    <string name="overspending_first_time">You exceeded your daily budget for the first time</string>
    <string name="overspending_after_not_go_out_budget">More from the budget you did not go</string>
    <string name="overspending_after_few_times_out_budget">After that, you had %1$s of the %2$s left over budget</string>
    <string name="overspending_after_many_times_out_budget">After only %1$s of the %2$s remaining, you were on budget</string>
    <string name="overspending_after_all_times_out_budget">After all of the %1$s left you haven\'t been out of budget</string>
    <string name="without_tag">Without tag</string>
    <string name="rest_tags">Rest</string>
    <string name="not_enough_data_for_tags_chart">We can\'t split your spends by categories</string>
    <string name="not_enough_data_for_tags_chart_use_tags_hint">Use tags to see chart by categories</string>
    <string name="spends_calendar_hint">Chart show how much you spent every day relative to your daily budget</string>
    <string name="hello">Hello!</string>
    <string name="onboarding_title">Welcome to Buckwheat, let\'s save money together</string>
    <string name="set_period_title">Set up a budget</string>
    <string name="help_set_budget_title">Establish a budget</string>
    <string name="help_set_budget_description">Calculate approximately how much money you need for a certain period, such as a month, and enter it in the application. If you can’t calculate, indicate it very approximately, for example, half of the salary, over time you will indicate it more and more accurately</string>
    <string name="help_record_spends_title">Record every expense</string>
    <string name="help_record_spends_description">The application will calculate how much you need to spend per day to fit into the budget, write down the expenses and keep track of the budget</string>
    <string name="help_good_luck_title">Spend wisely</string>
    <string name="help_good_luck_description">Over time, you will learn to feel how much you really spend and how much you need. Learn to understand whether you can spend money on a trinket right now</string>
    <string name="copy_in_clipboard">Copied to clipboard</string>
    <string name="not_found_email_clients">No email clients found</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="today">Today</string>
    <string name="export_to_csv_success">Spending exported</string>
    <string name="export_to_csv_failed">Failed to export expenses</string>
    <string name="add_spent">Add spent</string>
    <string name="add_spent_short">Spent</string>
    <string name="select_currency_description">The currency does not affect the calculations in any way, it is just a designation for easier understanding of numbers.</string>
    <string name="remember_choice_reacalc_budget_description">Later you can change in the wallet</string>
    <string name="remember_choice">Remember the choice</string>
    <string name="rest_label">Rest</string>
    <string name="choose_recalc_budget_method_label">Choose a residue distribution method</string>
    <string name="choose_recalc_budget_method_description">You can choose how to distribute the balance of the budget after the day. \n\nFor example, you have a budget for 500 day, yesterday you spent 400, today you can either distribute 100 on the remaining days, or spend 600 (500 + 100) today</string>
    <string name="always_ask">Always ask</string>
    <string name="method_split_to_rest_days_title">Distribute</string>
    <string name="method_split_to_rest_days_description">The restless residue will be distributed on the remaining days</string>
    <string name="method_add_to_current_day_title">Add to the current daily budget</string>
    <string name="method_add_to_current_day_description">The restless residue will be added to the current daily budget</string>
    <string name="spent_budget">Spent</string>
    <string name="edit_spent">Editable spent</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="over">over</string>
    <string name="home_widgets_label">Home screen widgets</string>
    <string name="try_home_widgets_desc">Buckwheat now has widgets. Try it out and keep track of your budget from the home screen</string>
    <string name="tutorial_open_wallet">Click to view budget details</string>
    <string name="tutorial_open_history">Drag to view spending history</string>
    <string name="recalc_budget_on_last_day">Today is the last day, it makes no sense to distribute</string>
    <string name="start_last_day_description">Today you can spend %1$s</string>
    <string name="thousand_numerical_shorthand">k</string>
    <string name="million_numerical_shorthand">m</string>
    <string name="billion_numerical_shorthand">b</string>
    <string name="trillion_numerical_shorthand">t</string>
    <string name="history_title">History</string>
    <string name="export_to_csv_file_name">Spends (from %1$s to %2$s)</string>
    <string name="crash_report_ready">An error occurred</string>
</resources>